Fixed info popup

--- a/hivemind/index.html
+++ b/hivemind/index.html
@@ -33,7 +33,7 @@
         </p>
         <p class="bottom">
             Created by <a href="https://joshschnauber.com" target="_blank" rel="noopener noreferrer">Josh Schnauber</a><br>
-            This website is on <a href="https://github.com/joosh119/HivemindAI" target="_blank" rel="noopener noreferrer">Github</a>
+            This project is on <a href="https://github.com/joosh119/HivemindAI" target="_blank" rel="noopener noreferrer">Github</a>
         </p>
     </div>
 
